kdebase-workspace (4:4.1.1-0) UNRELEASED; urgency=low

  * New upstream release.
 
  +++ Changes by Sune Vuorela:
  
  * Refresh patches:
    - Remove 23_systray_fixes, merged upstream.
  * Kill off some -dev package dependencies. (which ones :?)
  * Add cursors to not-installed.

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Update installed files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 31 Aug 2008 17:07:28 +0200

kdebase-workspace (4:4.1.0-3) experimental; urgency=low

  * Install konqueror as x-www-browser alternative (Closes: #495746).
  * Add manpages for konquror, kfmclient and keditbookmarks.

 -- Armin Berres <trigger+debian@space-based.de>  Thu, 21 Aug 2008 11:35:14 +0200

kdebase-workspace (4:4.1.0-2) experimental; urgency=low

  +++ Changes by Sune Vuorela:

  * Move ksysguard* to utils section.

  +++ Changes by Fathi Boudra:

  * Bump Standards-Version to 3.8.0 (no changes needed).
  * Add patch to fix system tray with Qt4.4.1 (Closes: #495342).

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Remove libbluetooth-dev build-depens on non linux archs.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 16 Aug 2008 21:21:11 +0200

kdebase-workspace (4:4.1.0-1) experimental; urgency=low

  * New upstream release.

  +++ Changes by Sune Vuorela:

  * Make kdebase-workspace recommend kdebase-plasma (folderview)

  +++ Changes by Modestas Vainius:

  * Move kcm_fonts, kcm_style and kcm_style from kdebase-workspace-bin to
    systemsettings. Preparing for systemsettings release to unstable.
  * Adapt sameVersionDep substvars to new dh_sameversiondeps syntax.

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Update installed files and build depends.
  * Bump libkwineffects1 shlibs.
  * Fix descriptions line with more than 80 chars.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 27 Jul 2008 02:10:23 +0200

kdebase-workspace (4:4.0.98-1) experimental; urgency=low
