@@ -1,0 +1,3 @@
+#! /bin/sh
+exec >&3
+dpkg -l | grep plasma
